--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
-    background-color: rgb(40,42,44);
+    background-color: rgb(0,0,0);
     font-family: "Open Sans", sans-serif;
-    text-align: left;
+    text-align: center;
 }
 h1{
 	color: rgb(255, 255, 255);
